cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS On)
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/SetMultiThread.cmake)


PROJECT(embedd_python CXX C)

IF(WIN32)
	set(Boost_USE_STATIC_LIBS		ON)
	set(Boost_USE_STATIC_RUNTIME	ON)
	set(BOOST_USE_MULTITHREADED		ON)
	SET(BOOST_INCLUDEDIR "D:/source/include/boost-1_47" CACHE PATH "Path to boost includes")
	SET(BOOST_LIBRARYDIR "D:/source/lib/x64" CACHE PATH "Path to boost libraries")
ENDIF(WIN32)

IF(NOT SHARED_LIBS)
  IF(WIN32)
    OPTION(SHARED_LIBS "Compile shared libraries" OFF)
  ELSE(WIN32)
    OPTION(SHARED_LIBS "Compile shared libraries" ON)
  ENDIF(WIN32)
ENDIF(NOT SHARED_LIBS)


SET(BUILD_TARGET_EXE_PATH "${PROJECT_BINARY_DIR}")
if(CMAKE_CL_64)
	MESSAGE(STATUS "Detected x64")
	SET(PYTHON_ROOT c:/python/27x64)	
ELSEIF(WIN32)
	MESSAGE(STATUS "Detected w32")
	SET(PYTHON_ROOT c:/python/27)	
ENDIF()

FIND_PACKAGE(PythonLibsEx)
IF (PYTHONLIBSEX_FOUND)
	MESSAGE(STATUS "Found python (lib) in: ${PYTHON_LIBRARY}")
	INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
ENDIF (PYTHONLIBSEX_FOUND)

FIND_PACKAGE(Boost COMPONENTS system filesystem thread program_options python REQUIRED)
if(Boost_FOUND)
	MESSAGE(STATUS "Found boost in: ${Boost_INCLUDE_DIRS} / ${Boost_LIBRARY_DIRS}")
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
else(Boost_FOUND)
	MESSAGE(FATAL_ERROR "boost NOT fround: ${Boost_ERROR_REASON}")
endif(Boost_FOUND)

IF(NOT WIN32)
	FIND_PACKAGE(Threads REQUIRED)
	IF (NOT CMAKE_USE_PTHREADS_INIT)
		message(FATAL_ERROR "Could not find POSIX threads")
	ENDIF (NOT CMAKE_USE_PTHREADS_INIT)
	FIND_PACKAGE(Threads REQUIRED)
ENDIF(NOT WIN32)

LINK_DIRECTORIES(${CMAKE_LIBRARY_PATH} ${BOOST_LIBRARYDIR})

SET_MULTITHREAD()
ADD_SUBDIRECTORY(00_hello_world)
ADD_SUBDIRECTORY(01_threads)
ADD_SUBDIRECTORY(02_embed_python)
ADD_SUBDIRECTORY(03_python_callins)
ADD_SUBDIRECTORY(04_thread_safe)
