CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(02_embed_python)

SET(SOURCE_FILES
	embed_python.cpp
)

IF(WIN32)
	SET(SOURCE_FILES ${SOURCE_FILES}
		embed_python.hpp
	)
ENDIF(WIN32)

ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)

ADD_EXECUTABLE(embed_python ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(embed_python ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES})
