CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(03_python_callins)

SET(SOURCE_FILES
	python_callins.cpp
)

IF(WIN32)
	SET(SOURCE_FILES ${SOURCE_FILES}
		python_callins.hpp
	)
ENDIF(WIN32)

ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)

ADD_EXECUTABLE(python_callins ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(python_callins ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES})
