CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(04_thread_safe)

SET(SOURCE_FILES
	thread_safe.cpp
)

IF(WIN32)
	SET(SOURCE_FILES ${SOURCE_FILES}
		thread_safe.hpp
	)
ENDIF(WIN32)

ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)

ADD_EXECUTABLE(thread_safe ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(thread_safe ${Boost_THREAD_LIBRARY} ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES})
